<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/background_color"
    tools:context=".fragment.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@color/purple_700">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_70sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_direct" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:scrollbars="none"
        android:scrollIndicators="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"
                android:columnCount="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/home_trans"
                    android:layout_width="0dp"
                    android:foreground="?selectableItemBackground"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_columnWeight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/_5sdp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_phone"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="@dimen/_10ssp"
                            android:fontFamily="@font/dinpro_regular"
                            android:text="@string/transferts_inter"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/home_transpro"
                    android:layout_width="0dp"
                    android:foreground="?selectableItemBackground"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:layout_columnWeight="1" >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_moto"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="@dimen/_10ssp"
                            android:fontFamily="@font/dinpro_regular"
                            android:text="@string/trans_pro" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="@color/purple_700"
                            android:fontFamily="@font/dinpro_regular"
                            android:textSize="@dimen/_6ssp"
                            android:text="@string/livraison_de_virtuel" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/home_solde"
                    android:layout_width="0dp"
                    android:foreground="?selectableItemBackground"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_columnWeight="1" >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_solde"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:fontFamily="@font/dinpro_regular"
                            android:textSize="@dimen/_10ssp"
                            android:text="@string/mon_solde"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/home_forfaits"
                    android:layout_width="0dp"
                    android:foreground="?selectableItemBackground"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_box"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:fontFamily="@font/dinpro_regular"
                            android:textSize="@dimen/_10ssp"
                            android:text="@string/activation_de_forfaits"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </GridLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>