<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/background_color"
    tools:context=".layouts.TransProActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_header"
        android:background="@color/purple_700">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_back"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:tint="@color/black_acsent" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="@dimen/_15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_direct" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_pro_head"
                android:fontFamily="@font/myriadpro_bold"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/header"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfert_money"
                android:fontFamily="@font/dinpro_regular"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:textSize="14sp"
                android:layout_gravity="center"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_5dp"
                android:layout_marginBottom="@dimen/_5dp">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_10dp">

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/trans_spinner"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/ic_moto"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/trans_spinner" />

                            <EditText
                                android:id="@+id/trans_name"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="5dp"
                                android:ems="10"
                                android:hint="@string/destinataire_phone"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/trans_spinner"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>


                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>


            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>